--- a/src/Cimbalino.Toolkit.Core (WP8)/Cimbalino.Toolkit.Core (WP8).csproj
+++ b/src/Cimbalino.Toolkit.Core (WP8)/Cimbalino.Toolkit.Core (WP8).csproj
@@ -193,6 +193,9 @@
     <Compile Include="..\Cimbalino.Toolkit.Core %28Portable%29\Services\IApplicationSettingsServiceHandler.cs">
       <Link>Services\IApplicationSettingsServiceHandler.cs</Link>
     </Compile>
+    <Compile Include="..\Cimbalino.Toolkit.Core %28Portable%29\Services\IDeferral.cs">
+      <Link>Services\IDeferral.cs</Link>
+    </Compile>
     <Compile Include="..\Cimbalino.Toolkit.Core %28Portable%29\Services\IDeviceStatusService.cs">
       <Link>Services\IDeviceStatusService.cs</Link>
     </Compile>
