--- a/src/Cimbalino.Toolkit.Core (Win10)/Cimbalino.Toolkit.Core (Win10).csproj
+++ b/src/Cimbalino.Toolkit.Core (Win10)/Cimbalino.Toolkit.Core (Win10).csproj
@@ -277,6 +277,9 @@
     <Compile Include="..\Cimbalino.Toolkit.Core %28Portable%29\Services\IApplicationSettingsServiceHandler.cs">
       <Link>Services\IApplicationSettingsServiceHandler.cs</Link>
     </Compile>
+    <Compile Include="..\Cimbalino.Toolkit.Core %28Portable%29\Services\IDeferral.cs">
+      <Link>Services\IDeferral.cs</Link>
+    </Compile>
     <Compile Include="..\Cimbalino.Toolkit.Core %28Portable%29\Services\IDeviceSettingsService.cs">
       <Link>Services\IDeviceSettingsService.cs</Link>
     </Compile>
