Added IDeferral Interface
This will be used in future services that require the dev to call
.GetDeferral()

--- a/src/Cimbalino.Toolkit.Core (Portable)/Cimbalino.Toolkit.Core (Portable).csproj
+++ b/src/Cimbalino.Toolkit.Core (Portable)/Cimbalino.Toolkit.Core (Portable).csproj
@@ -93,6 +93,7 @@
     <Compile Include="Services\ApplicationProfileServiceMode.cs" />
     <Compile Include="Services\IDeferral.cs" />
     <Compile Include="Services\BatteryStatusChangedEventArgs.cs" />
+    <Compile Include="Services\IDeferral.cs" />
     <Compile Include="Services\ITitleBarService.cs" />
     <Compile Include="Services\IWindowsPhoneStoreService.cs" />
     <Compile Include="Services\IWindowsStoreService.cs" />
