Initial ShareService work

--- a/src/Cimbalino.Toolkit.Core (WP8)/Cimbalino.Toolkit.Core (WP8).csproj
+++ b/src/Cimbalino.Toolkit.Core (WP8)/Cimbalino.Toolkit.Core (WP8).csproj
@@ -208,6 +208,9 @@
     <Compile Include="..\Cimbalino.Toolkit.Core %28Portable%29\Services\IRuntimeInformationService.cs">
       <Link>Services\IRuntimeInformationService.cs</Link>
     </Compile>
+    <Compile Include="..\Cimbalino.Toolkit.Core %28Portable%29\Services\IShareContractService.cs">
+      <Link>Services\IShareContractService.cs</Link>
+    </Compile>
     <Compile Include="..\Cimbalino.Toolkit.Core %28Portable%29\Services\IStorageServiceHandler.cs">
       <Link>Services\IStorageServiceHandler.cs</Link>
     </Compile>
