--- a/src/Cimbalino.Toolkit (WP8)/Cimbalino.Toolkit (WP8).csproj
+++ b/src/Cimbalino.Toolkit (WP8)/Cimbalino.Toolkit (WP8).csproj
@@ -88,6 +88,9 @@
     <Compile Include="..\Cimbalino.Toolkit %28Win10%29\Services\TitleBarService.cs">
       <Link>Services\TitleBarService.cs</Link>
     </Compile>
+    <Compile Include="..\Cimbalino.Toolkit %28WPA81%29\Services\ShareContractService.cs">
+      <Link>Services\ShareContractService.cs</Link>
+    </Compile>
     <Compile Include="Behaviors\AfterAutoFocusEventArgs.cs" />
     <Compile Include="Behaviors\ApplicationBar.cs" />
     <Compile Include="Behaviors\ApplicationBarBehavior.cs" />
