--- a/src/Cimbalino.Toolkit (WPA81)/Cimbalino.Toolkit (WPA81).csproj
+++ b/src/Cimbalino.Toolkit (WPA81)/Cimbalino.Toolkit (WPA81).csproj
@@ -201,6 +201,7 @@
     <Compile Include="Behaviors\Behavior.cs" />
     <Compile Include="Services\NavigationService.cs" />
     <Compile Include="Helpers\DependencyObjectCollection{T}.cs" />
+    <Compile Include="Services\ShareContractService.cs" />
     <Compile Include="Services\StatusBarService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
