--- a/src/Cimbalino.Toolkit (Win10)/Cimbalino.Toolkit (Win10).csproj
+++ b/src/Cimbalino.Toolkit (Win10)/Cimbalino.Toolkit (Win10).csproj
@@ -233,6 +233,9 @@
     <Compile Include="..\Cimbalino.Toolkit %28WPA81%29\Services\NavigationService.cs">
       <Link>Services\NavigationService.cs</Link>
     </Compile>
+    <Compile Include="..\Cimbalino.Toolkit %28WPA81%29\Services\ShareContractService.cs">
+      <Link>Services\ShareContractService.cs</Link>
+    </Compile>
     <Compile Include="..\Cimbalino.Toolkit %28WPA81%29\Services\StatusBarService.cs">
       <Link>Services\StatusBarService.cs</Link>
     </Compile>
