--- a/src/Cimbalino.Toolkit.Core (Win10)/Cimbalino.Toolkit.Core (Win10).csproj
+++ b/src/Cimbalino.Toolkit.Core (Win10)/Cimbalino.Toolkit.Core (Win10).csproj
@@ -316,6 +316,9 @@
     <Compile Include="..\Cimbalino.Toolkit.Core %28Portable%29\Services\IRuntimeInformationService.cs">
       <Link>Services\IRuntimeInformationService.cs</Link>
     </Compile>
+    <Compile Include="..\Cimbalino.Toolkit.Core %28Portable%29\Services\IShareContractService.cs">
+      <Link>Services\IShareContractService.cs</Link>
+    </Compile>
     <Compile Include="..\Cimbalino.Toolkit.Core %28Portable%29\Services\ISmsComposeService.cs">
       <Link>Services\ISmsComposeService.cs</Link>
     </Compile>
