Added extra battery information
Also fixed ApiHelper being missing from WP8 project

--- a/src/Cimbalino.Toolkit.Core (Win10)/Cimbalino.Toolkit.Core (Win10).csproj
+++ b/src/Cimbalino.Toolkit.Core (Win10)/Cimbalino.Toolkit.Core (Win10).csproj
@@ -262,6 +262,9 @@
     <Compile Include="..\Cimbalino.Toolkit.Core %28Portable%29\Services\ApplicationProfileServiceMode.cs">
       <Link>Services\ApplicationProfileServiceMode.cs</Link>
     </Compile>
+    <Compile Include="..\Cimbalino.Toolkit.Core %28Portable%29\Services\BatteryStatusChangedEventArgs.cs">
+      <Link>Services\BatteryStatusChangedEventArgs.cs</Link>
+    </Compile>
     <Compile Include="..\Cimbalino.Toolkit.Core %28Portable%29\Services\DeviceStatusServicePowerSource.cs">
       <Link>Services\DeviceStatusServicePowerSource.cs</Link>
     </Compile>
