--- a/src/Cimbalino.Toolkit.Core (Portable)/Cimbalino.Toolkit.Core (Portable).csproj
+++ b/src/Cimbalino.Toolkit.Core (Portable)/Cimbalino.Toolkit.Core (Portable).csproj
@@ -92,6 +92,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ApplicationProfileServiceMode.cs" />
     <Compile Include="Services\IDeferral.cs" />
+    <Compile Include="Services\BatteryStatusChangedEventArgs.cs" />
     <Compile Include="Services\ITitleBarService.cs" />
     <Compile Include="Services\IWindowsPhoneStoreService.cs" />
     <Compile Include="Services\IWindowsStoreService.cs" />
