--- a/src/Cimbalino.Toolkit.Core (WP8)/Cimbalino.Toolkit.Core (WP8).csproj
+++ b/src/Cimbalino.Toolkit.Core (WP8)/Cimbalino.Toolkit.Core (WP8).csproj
@@ -188,6 +188,15 @@
     <Compile Include="..\Cimbalino.Toolkit.Core %28Portable%29\Services\ApplicationProfileServiceMode.cs">
       <Link>Services\ApplicationProfileServiceMode.cs</Link>
     </Compile>
+    <Compile Include="..\Cimbalino.Toolkit.Core %28Portable%29\Services\AuthenticationOptions.cs">
+      <Link>Services\AuthenticationOptions.cs</Link>
+    </Compile>
+    <Compile Include="..\Cimbalino.Toolkit.Core %28Portable%29\Services\AuthenticationResult.cs">
+      <Link>Services\AuthenticationResult.cs</Link>
+    </Compile>
+    <Compile Include="..\Cimbalino.Toolkit.Core %28Portable%29\Services\AuthenticationStatus.cs">
+      <Link>Services\AuthenticationStatus.cs</Link>
+    </Compile>
     <Compile Include="..\Cimbalino.Toolkit.Core %28Portable%29\Services\DeviceStatusServicePowerSource.cs">
       <Link>Services\DeviceStatusServicePowerSource.cs</Link>
     </Compile>
@@ -202,6 +211,9 @@
     </Compile>
     <Compile Include="..\Cimbalino.Toolkit.Core %28Portable%29\Services\IApplicationSettingsServiceHandler.cs">
       <Link>Services\IApplicationSettingsServiceHandler.cs</Link>
+    </Compile>
+    <Compile Include="..\Cimbalino.Toolkit.Core %28Portable%29\Services\IAuthenticationBrokerService.cs">
+      <Link>Services\IAuthenticationBrokerService.cs</Link>
     </Compile>
     <Compile Include="..\Cimbalino.Toolkit.Core %28Portable%29\Services\IClipboardService.cs">
       <Link>Services\IClipboardService.cs</Link>
