--- a/src/Cimbalino.Toolkit (WP8)/Cimbalino.Toolkit (WP8).csproj
+++ b/src/Cimbalino.Toolkit (WP8)/Cimbalino.Toolkit (WP8).csproj
@@ -92,6 +92,9 @@
     <CodeAnalysisRuleSet>..\StyleCop.Analyzers.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="..\Cimbalino.Toolkit %28UWP%29\Services\AuthenticationBrokerService.cs">
+      <Link>Services\AuthenticationBrokerService.cs</Link>
+    </Compile>
     <Compile Include="Behaviors\AfterAutoFocusEventArgs.cs" />
     <Compile Include="Behaviors\ApplicationBar.cs" />
     <Compile Include="Behaviors\ApplicationBarBehavior.cs" />
